@@ -1,5 +1,12 @@
 2005-01-17  David Schleef  <ds@schleef.org>
 
+	Patch from igor@avtomir.ru (Igor Mokrushin)
+
+	* audio_arts.c: New backend (bug #82154)
+	* esd.c: (main):
+
+2005-01-17  David Schleef  <ds@schleef.org>
+
 	* Makefile.am: update for modern automake/autoconf
 	* audio.c: make ALSA-1.0 the default driver
 	* configure.ac: update for modern automake/autoconf
